@@ -1,5 +1,8 @@
 This file documents the revision history for mod_gearman.
 
+next:
+          - fixed segfault when dupserver list was empty
+
 1.4.12 Tue Nov  5 10:26:07 CET 2013
           - fixed send_gearman to send duplicate result to normal server (Brian Christiansen)
           - ensure worker are running and doing jobs after reload/sighup
